# rust-gui-egui-newscli-plus

./: Cargo.toml  README.md
headlines/: Cargo.toml
headlines/src/: headlines.rs  main.rs
news_api/: Cargo.toml
news_api/src/: lib.rs
newsapi/: .env.example  Cargo.toml  README.md
newsapi/news_api/src/: lib.rs
newsapi/src/: main.rs  theme.rs
