[package]
name = "news_api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
url = "2.3.1"
ureq = "2.6.2"
thiserror = "1.0.26"
serde_json = "1.0.92"
serde = { version = "1.0.152", features = ["derive"] }
reqwest = {version = "0.11.4", features = ["json"], optional = true }

[features]
# default = ["async"]
async = [ "dep:reqwest", "reqwest?/json" ]